# FoGaze

./: .gitignore  README.md  fogaze.sh  fogaze_arm.sh  main.py  requirements.txt  test_stereo.py
Research-Documents/: FoGaze_IEEE.md  FoGaze_Overview.md  FoGaze_Slides.html  STEREO_CALIBRATION.md
assets/: mock_scene_depth.npy  mock_scene_objects.json
modules/: __init__.py  calibrator.py  calibrator_sklearn.py  camera_calibrator.py  depth_estimator.py  eyetrax_features.py  face_lock.py  filters.py  gaze_tracker.py  grasp.py  gui_overlay.py  make_chessboard.py  mock_depth_estimator.py  mock_scene.py  object_detector.py  stereo_calibrator.py  stereo_depth_estimator.py  ui.py
ros2_ws/src/fogaze_manip/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/fogaze_manip/config/: graspability.yaml
ros2_ws/src/fogaze_manip/fogaze_manip/: _fogaze_path.py  mock_arm_executor.py  moveit_pick_executor.py  pickup_planner.py  scene_publisher.py
ros2_ws/src/fogaze_manip/launch/: pickup_mock.launch.py  pickup_moveit.launch.py  pickup_moveit_headless.launch.py
ros2_ws/src/fogaze_manip/test/: test_graspability.py
ros2_ws/src/fogaze_manip/worlds/: fogaze_table.sdf
ros2_ws/src/fogaze_rviz/: package.xml  setup.py
ros2_ws/src/fogaze_rviz/config/: fogaze.rviz
ros2_ws/src/fogaze_rviz/fogaze_rviz/: fogaze_node.py
ros2_ws/src/fogaze_rviz/launch/: fogaze_rviz.launch.py
ros2_ws/src/fogaze_rviz/scripts/: fogaze_node
