<?xml version="1.0"?>
<package format="3">
  <name>fogaze_rviz</name>
  <version>0.1.0</version>
  <description>FoGaze ROS 2 bridge — YOLO detection markers for Rviz</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
